--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Picodes10",
   "license": "ISC",
-  "description": "",
+  "description": "API Development",
   "dependencies": {
     "express": "^4.21.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "RESTAPI"
   }
 }
